--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         XML-Writer-Simple
-version:      0.01
-version_from: lib/XML/Writer/Simple.pm
-installdirs:  site
+--- #YAML:1.0
+name:               XML-Writer-Simple
+version:            0.02
+abstract:           Create XML files easily!
+author:
+    - Alberto Simoes <ambs@cpan.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Test::More:                    0
-    XML::DT:                       0.42
-    XML::DTDParser:                2.01
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    Test::More:      0
+    XML::DT:         0.42
+    XML::DTDParser:  2.01
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
