--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,24 @@
---- #YAML:1.0
-name:               XML-Writer-Simple
-version:            0.07
-abstract:           Create XML files easily!
+---
+abstract: 'Create XML files easily!'
 author:
-    - Alberto Simoes <ambs@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Alberto Simoes <ambs@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Test::More:      0
-    XML::DT:         0.42
-    XML::DTDParser:  2.01
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: XML-Writer-Simple
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Test::More: 0
+  XML::DT: 0.42
+  XML::DTDParser: 2.01
+version: 0.08
