--- a/META.yml
+++ b/META.yml
@@ -3,22 +3,22 @@ abstract: 'Create XML files easily!'
 author:
   - 'Alberto Simoes <ambs@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.133380'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: XML-Writer-Simple
 no_index:
   directory:
     - t
     - inc
 requires:
-  Test::More: 0
-  XML::DT: 0.42
-  XML::DTDParser: 2.01
-version: 0.08
+  Test::More: '0'
+  XML::DT: '0.42'
+  XML::DTDParser: '2.01'
+version: '0.09'
