--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,25 @@
 ---
 abstract: 'Create XML files easily!'
 author:
-  - 'Alberto Simoes <ambs@cpan.org>'
+  - 'Alberto Simões <ambs@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: '0'
+  Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.133380'
-license: unknown
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: XML-Writer-Simple
-no_index:
-  directory:
-    - t
-    - inc
 requires:
-  Test::More: '0'
-  XML::DT: '0.42'
-  XML::DTDParser: '2.01'
-version: '0.09'
+  Exporter: '0'
+  XML::DT: '0'
+  XML::DTDParser: '0'
+  strict: '0'
+  vars: '0'
+  warnings: '0'
+resources:
+  repository: https://natura.di.uminho.pt/svn/main/xml/XML-Writer-Simple
+version: '0.10'
